force-app/main/default/objects/SCOC__InquiryList__c/SCOC__InquiryList__c.object-meta.xml
<CustomObject>
    <description>Response Entity Inquiry List</description>
    <label>Inquiry</label>
    <nameField>
        <displayFormat>IL-{00000}</displayFormat>
        <label>Inquiry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inquiries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>