force-app/main/default/objects/SCOC__InquiryList__c/fields/SCOC__AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>SCOC__AccountNumber__c</fullName>
    <description>AccountNumber</description>
    <label>AccountNumber</label>
    <length>8</length>
    <type>Text</type>
</CustomField>