force-app/main/default/objects/SCOC__InquiryList__c/fields/SCOC__CompanyName__c.field-meta.xml
<CustomField>
    <fullName>SCOC__CompanyName__c</fullName>
    <description>CompanyName</description>
    <label>CompanyName</label>
    <length>32</length>
    <type>Text</type>
</CustomField>