force-app/main/default/objects/SCOC__InquiryList__c/fields/SCOC__CompanyTypeCode__c.field-meta.xml
<CustomField>
    <fullName>SCOC__CompanyTypeCode__c</fullName>
    <description>CompanyTypeCode</description>
    <label>CompanyTypeCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>