force-app/main/default/objects/SCOC__InquiryList__c/fields/SCOC__InquiryDate__c.field-meta.xml
<CustomField>
    <fullName>SCOC__InquiryDate__c</fullName>
    <description>Inquiry Date</description>
    <label>Inquiry Date</label>
    <type>Date</type>
</CustomField>