force-app/main/default/objects/SCOC__InquiryList__c/fields/SCOC__JointApplicant__c.field-meta.xml
<CustomField>
    <fullName>SCOC__JointApplicant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Joint Applicant</description>
    <inlineHelpText>Joint Applicant</inlineHelpText>
    <label>Joint Applicant</label>
    <type>Checkbox</type>
</CustomField>