force-app/main/default/objects/SCOC__InquiryList__c/fields/SCOC__OptIn__c.field-meta.xml
<CustomField>
    <fullName>SCOC__OptIn__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Opt In</description>
    <inlineHelpText>Opt Int</inlineHelpText>
    <label>Opt In</label>
    <type>Checkbox</type>
</CustomField>