force-app/main/default/objects/SCOC__InquiryList__c/fields/SCOC__SourcedFrom__c.field-meta.xml
<CustomField>
    <fullName>SCOC__SourcedFrom__c</fullName>
    <description>SourcedFrom</description>
    <label>SourcedFrom</label>
    <length>3</length>
    <type>Text</type>
</CustomField>