force-app/main/default/objects/SCOC__InquiryList__c/fields/SCOC__SubscriberId__c.field-meta.xml
<CustomField>
    <fullName>SCOC__SubscriberId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to subscriber Id.</description>
    <label>Subscriber Id</label>
    <referenceTo>SCOC__SubscriberIdList__c</referenceTo>
    <relationshipLabel>Subscriber Id Reference</relationshipLabel>
    <relationshipName>InquiryList</relationshipName>
    <type>Lookup</type>
</CustomField>