force-app/main/default/objects/SCOC__InquiryList__c/fields/SCOC__TermsDuration__c.field-meta.xml
<CustomField>
    <fullName>SCOC__TermsDuration__c</fullName>
    <description>Inquiry Terms Duration</description>
    <label>Terms Duration</label>
    <length>3</length>
    <type>Text</type>
</CustomField>